Fix resposive layout problems

--- a/css/registration-style.css
+++ b/css/registration-style.css
@@ -21,9 +21,11 @@ body {
 }
 
 .container {
-	height: 100%;
+	/*height: 100%;*/
 	padding-top: 50px;
-	/*border: 1px solid green;*/
+	min-height: 100%;
+	height: auto;
+	border: 1px solid green;
 }
 
 #register {
@@ -31,6 +33,7 @@ body {
 	height: 500px;
 	width: 70%;
 	text-align: center;
+	margin-bottom: 20px;
 	/*border: 1px solid silver;*/
 }
 
@@ -39,6 +42,7 @@ body {
 	height: 500px;
 	width: 70%;
 	text-align: center;
+	margin-bottom: 20px;
 	/*border: 1px solid silver;*/
 }
 
@@ -126,6 +130,5 @@ a:hover{
 @media screen and (max-width: 768px){
 	#login,#register{
 		width: 90%;
-		margin-bottom: 20px;
 	}
 }
